# benchfft

./: Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac
benchees/: Makefile.am  Makefile.in
benchees/acml/: Makefile.in
benchees/armpl/: Makefile.am  Makefile.in  doit.c  doitr.c
benchees/arprec/: Makefile.in
benchees/bloodworth/: Makefile.in
benchees/burrus/: Makefile.in
benchees/cross/: Makefile.in
benchees/cwplib/: Makefile.in
benchees/dfftpack/: Makefile.in
benchees/dsp/: Makefile.in
benchees/dxml/: Makefile.in
benchees/emayer/: Makefile.in
benchees/esrfft/: Makefile.in
benchees/essl/: Makefile.in
benchees/ffte/: Makefile.in
benchees/fftpack/: Makefile.in
benchees/fftreal/: Makefile.in
benchees/fftw2/: Makefile.in
benchees/fftw3/: Makefile.in
benchees/fxt/: Makefile.in
benchees/glassman/: Makefile.in
benchees/goedecker/: Makefile.in
benchees/gpfa/: Makefile.in
benchees/green-ffts-2.0/: Makefile.in
benchees/gsl/: Makefile.in
benchees/harm/: Makefile.in
benchees/imsl/: Makefile.in
benchees/intel-ipps/: Makefile.in
benchees/intel-mkl/: Makefile.am  Makefile.in  doit_dfti.c
benchees/jmfft/: Makefile.in
benchees/kissfft/: Makefile.in
benchees/krukar/: Makefile.in
benchees/mfft/: Makefile.in
benchees/mixfft/: Makefile.in
benchees/monnier/: Makefile.in
benchees/morris/: Makefile.in
benchees/mpfun77/: Makefile.in
benchees/mpfun90/: Makefile.in
benchees/nag/: Makefile.in
benchees/napack/: Makefile.in
benchees/nr/: Makefile.in
libbench/: Makefile.in
scripts/: Makefile.in
(+16 files in other folders)
